--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           <tbody>
             <tr class="">
               <td class="circle">20:30</td>
-              <td>関西空港 第1ターミナル 集合</td>
-              <td>詳細は後日。夕飯は各々？翌日の朝ごはん持参。<a href="http://bit.ly/2QoGBrv" target="_blank">オンラインチェックイン可能</a></td>
+              <td><a href="https://www.kansai-airport.or.jp/map/t1" target="_blank">関西空港 第1ターミナル2F 集合</a></td>
+              <td>詳細は後日。<br>夕飯は各々？翌日の朝ごはん持参。<br><a href="http://bit.ly/2QoGBrv" target="_blank">オンラインチェックイン可能</a></td>
             </tr>
             <tr class="transfar">
               <td class="">|</td>
@@ -143,7 +143,7 @@
             <tr class="">
               <td class=" circle">21:30</td>
               <td><a href="https://www.ikspiari.com/" target="_blank">イクスピアリ</a></td>
-              <td><a href="https://www.ikspiari.com/gourmet/" target="_blank">レストラン情報</a>(いずれもL.O.22:00なので注意)</td>
+              <td><a href="https://www.ikspiari.com/gourmet/" target="_blank">レストラン情報<br>(いずれもL.O.22:00なので注意)</a></td>
             </tr>
             <tr class="transfar">
               <td class="">|</td>
@@ -247,17 +247,16 @@
       <section>
         <h4>Kansai Airport</h4>
         <p>空港アクセス</p>
-        <div>
-          <img src="" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
+        <div class="flex">
+          <img src="img/kansai-station.png" alt="">
+          <img src="img/kansai-terminal.png" alt="">
         </div>
       </section>
 
       <section>
         <h4>Narita Airport</h4>
         <p>空港アクセス</p>
-        <div>
+        <div class="flex">
           <img src="img/narita-terminal.png" alt="">
           <img src="img/narita-station.png" alt="">
           <img src="img/narita-access.png" alt="">
@@ -265,13 +264,27 @@
       </section>
 
       <section>
-        <h4>Disney Land</h4>
-        <p></p>
+        <h4>Disney Sea</h4>
+        <p>場内マップ</p>
+        <div class="dl">
+          <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">PDF</a>
+          <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">DL</a>
+        </div>
+        <a href="https://www.tokyodisneyresort.jp/tdl/map.html" target="_blank" class="map">
+          <img src="img/map_tds.jpg" alt="">
+        </a>
       </section>
 
       <section>
-        <h4>Disney Sea</h4>
-        <p></p>
+        <h4>Disney Land</h4>
+        <p>場内マップ</p>
+        <div class="dl">
+          <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">PDF</a>
+          <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">DL</a>
+        </div>
+        <a href="https://www.tokyodisneyresort.jp/tds/map.html" target="_blank" class="map">
+          <img src="img/map_tdl.jpg" alt="">
+        </a>
       </section>
 
       <section>
