--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
         <li><i class="fas fa-mobile-alt"></i>
           スマホ</li>
         <li><i class="fas fa-plug"></i> 充電コード</li>
-        <li><i class="fal fa-battery-three-quarters"></i> モバイルバッテリー</li>
+        <li><i class="far fa-battery-bolt"></i> モバイルバッテリー</li>
         <li><i class="far fa-circle"></i> レンズボール（雄大）</li>
         <li><i class="fas fa-tshirt"></i> 着替え</li>
         <li><a href="https://www.amazon.co.jp/gp/product/B0763MZQVR/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=B0763MZQVR&linkCode=as2&tag=0keihaaan-22&linkId=bbca0999ea0f93320fd4a4fc554bbd1a" target="_blank"><i class=" far fa-magic"></i>洗面道具</a></li>
+        <li class="far fa-user-astronaut">マスク</li>
+        <li><i class="fal fa-stroopwafel"></i>のど飴（けいこ）</li>
+        <li></li>
         <li><i class="fas fa-coffee"></i>21日の朝ごはん</li>
         <li><i class="far fa-heart"></i>カチューシャ</li>
         <li><i class="fas fa-hat-wizard"></i> 楽しむ気持ち！</li>
@@ -143,7 +146,7 @@
             <tr class="">
               <td class=" circle">21:30</td>
               <td><a href="https://www.ikspiari.com/" target="_blank">イクスピアリ</a></td>
-              <td><a href="https://www.ikspiari.com/gourmet/" target="_blank">レストラン情報<br>(いずれもL.O.22:00なので注意)</a></td>
+              <td><a href="https://www.ikspiari.com/gourmet/" target="_blank">レストラン情報<br>（いずれもL.O.22:00なので注意）</a></td>
             </tr>
             <tr class="transfar">
               <td class="">|</td>
@@ -204,7 +207,7 @@
             </tr>
             <tr class="">
               <td class="circle">19:15</td>
-              <td>レストラン</td>
+              <td>レストラン（おしゅしor焼肉）</td>
               <td></td>
             </tr>
             <tr class="transfar">
@@ -294,7 +297,11 @@
 
       <section>
         <h4>Dinner</h4>
-        <p></p>
+        <h5>Day2</h5>
+        <ul>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
       </section>
     </article>
   </main>
