--- a/index.html
+++ b/index.html
@@ -266,28 +266,32 @@
         </div>
       </section>
 
-      <section>
+      <section class="container">
         <h4>Disney Sea</h4>
         <p>場内マップ</p>
         <div class="dl">
           <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">PDF</a>
           <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">DL</a>
         </div>
-        <a href="https://www.tokyodisneyresort.jp/tdl/map.html" target="_blank" class="map">
-          <img src="img/map_tds.jpg" alt="">
-        </a>
+        <div class="map-img">
+          <a href="https://www.tokyodisneyresort.jp/tdl/map.html" target="_blank" class="map">
+            <img src="img/map_tds.jpg" alt="">
+          </a>
+        </div>
       </section>
 
-      <section>
+      <section class="container">
         <h4>Disney Land</h4>
         <p>場内マップ</p>
         <div class="dl">
           <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">PDF</a>
           <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">DL</a>
         </div>
-        <a href="https://www.tokyodisneyresort.jp/tds/map.html" target="_blank" class="map">
-          <img src="img/map_tdl.jpg" alt="">
-        </a>
+        <div class="map-img">
+          <a href="https://www.tokyodisneyresort.jp/tds/map.html" target="_blank" class="map">
+            <img src="img/map_tdl.jpg" alt="">
+          </a>
+        </div>
       </section>
 
       <section>
