--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/10up-sanitize.css/8.0.0/sanitize.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arimo|Pacifico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arimo|Pacifico|M+PLUS+Rounded+1p">
   <title>Trip to TDR</title>
 </head>
 
@@ -28,15 +28,17 @@
   </nav>
   <main>
     <article id="about" class="">
-      <h3>About</h3>
-      <h4>Date</h4>
+      <h2>About</h2>
+      <h3>Date</h3>
       <p>Nov. 20th, 2018 ~ Nov. 22th</p>
       <h4>Purpose</h4>
       <p>夢の国に遊びに行くぞー！</p>
       <h4>Place of stay</h4>
       <p>AirBnbの館</p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.4647585553325!2d139.88855511519952!3d35.64091943978919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60187d0b884f0281%3A0x5810761fbe267d62!2z44CSMjc5LTAwNDIg5Y2D6JGJ55yM5rWm5a6J5biC5p2x6YeO77yT5LiB55uu77yT77yU4oiS77yY!5e0!3m2!1sja!2sjp!4v1541494979587" width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-      <h4>What to bring</h4>
+      <a href="https://goo.gl/maps/cmSGaQQ45M92">
+        <img src="img/airbnb1.png" alt="" width="300">
+      </a>
+      <h3>What to bring</h3>
       <ul>
         <li><i class="fas fa-mobile-alt"></i>
           スマホ</li>
@@ -47,18 +49,18 @@
         <li><a href="https://www.amazon.co.jp/gp/product/B0763MZQVR/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=B0763MZQVR&linkCode=as2&tag=0keihaaan-22&linkId=bbca0999ea0f93320fd4a4fc554bbd1a" target="_blank"><i class=" far fa-magic"></i>洗面道具</a></li>
         <li class="far fa-user-astronaut">マスク</li>
         <li><i class="fal fa-stroopwafel"></i>のど飴（けいこ）</li>
-        <li></li>
-        <li><i class="fas fa-coffee"></i>21日の朝ごはん</li>
-        <li><i class="far fa-heart"></i>カチューシャ</li>
+        <li>スマホ三脚（けいこ）</li>
+        <li><i class="far fa-heart"></i>カチューシャ（けいこ）</li>
+        <li><i class="fas fa-coffee"></i>21日の朝ごはん？</li>
         <li><i class="fas fa-hat-wizard"></i> 楽しむ気持ち！</li>
       </ul>
       <p></p>
     </article>
 
     <article id="schedule" class="">
-      <h3>Schedule</h3>
+      <h2>Schedule</h2>
       <div>
-        <h4 class="">Day1</h4>
+        <h3 class="">Day1</h3>
         <table>
           <tbody>
             <tr class="">
@@ -100,7 +102,7 @@
         </table>
       </div>
       <div>
-        <h4 class="">Day2</h4>
+        <h3 class="">Day2</h3>
         <table>
           <tbody>
             <tr class="">
@@ -162,7 +164,7 @@
         </table>
       </div>
       <div>
-        <h4 class="">Day3</h4>
+        <h3 class="">Day3</h3>
         <table>
           <tbody>
             <tr class="">
@@ -246,10 +248,10 @@
     </article>
 
     <article id="spot" class="">
-      <h3>Spot Information</h3>
+      <h2>Spot Information</h2>
       <section>
-        <h4>Kansai Airport</h4>
-        <p>空港アクセス</p>
+        <h3>Kansai Airport</h3>
+        <h4>空港アクセス</h4>
         <div class="flex">
           <img src="img/kansai-station.png" alt="">
           <img src="img/kansai-terminal.png" alt="">
@@ -257,8 +259,8 @@
       </section>
 
       <section>
-        <h4>Narita Airport</h4>
-        <p>空港アクセス</p>
+        <h3>Narita Airport</h3>
+        <h4>空港アクセス</h4>
         <div class="flex">
           <img src="img/narita-terminal.png" alt="">
           <img src="img/narita-station.png" alt="">
@@ -267,8 +269,8 @@
       </section>
 
       <section class="container">
-        <h4>Disney Sea</h4>
-        <p>場内マップ</p>
+        <h3>Disney Sea</h3>
+        <h4 class="dl-title">場内マップ</h4>
         <div class="dl">
           <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">PDF</a>
           <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">DL</a>
@@ -278,30 +280,254 @@
             <img src="img/map_tds.jpg" alt="">
           </a>
         </div>
+        <details>
+          <summary>
+            <h4>エリア紹介</h4>
+          </summary>
+          <div class="flex area">
+            <div class="card">
+              <h5><a href="">メディテレーニアンハーバー</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">ミステリアスアイランド</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">アメリカンウォーターフロント</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">ポートディスカバリー</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">ロストリバーデルタ</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">マーメイドラグーン</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">アラビアンコースト</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+          </div>
+        </details>
+        <h4>アトラクション</h4>
+        <details>
+          <summary>
+            <h5>ファストパス対応アトラクション一覧</h5>
+          </summary>
+          <div class="flex">
+            <div class="card">
+              <h5><a href="">ニモ＆フレンズ・シーライダー</a></h5>
+              <p>ポートディスカバリー</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">タワー・オブ・テラー</a></h5>
+              <p>アメリカンウォーターフロント</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">トイ・ストーリー・マニア！</a></h5>
+              <p>アメリカンウォーターフロント</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">マーメイドラグーンシアター</a></h5>
+              <p>マーメイドラグーン</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">マジックランプシアター</a></h5>
+              <p>アラビアンコースト</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">レイジングスピリッツ</a></h5>
+              <p>ロストリバーデルタ</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">インディ・ジョーンズ®︎アドベンチャー：<br>クリスタルスカルの魔宮</a></h5>
+              <p>ロストリバーデルタ</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">センター・オブ・ジ・アース</a></h5>
+              <p>ミステリアスアイランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">海底2万マイル</a></h5>
+              <p>ミステリアスアイランド</p>
+              <img src="" alt="">
+            </div>
+          </div>
+        </details>
       </section>
 
       <section class="container">
-        <h4>Disney Land</h4>
-        <p>場内マップ</p>
+        <h3>Disney Land</h3>
+        <h4 class="dl-title">場内マップ</h4>
         <div class="dl">
-          <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">PDF</a>
-          <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">DL</a>
+          <a href="https://media2.tokyodisneyresort.jp/home/download/map/L_map_1811.pdf" target="_blank">PDF</a>
+          <a href="https://media2.tokyodisneyresort.jp/home/download/map/L_map_1811.pdf" target="_blank">DL</a>
         </div>
         <div class="map-img">
-          <a href="https://www.tokyodisneyresort.jp/tds/map.html" target="_blank" class="map">
+          <a href="https://media2.tokyodisneyresort.jp/home/download/map/L_map_1811.pdf" target="_blank" class="map">
             <img src="img/map_tdl.jpg" alt="">
           </a>
         </div>
+        <details>
+          <summary>
+            <h4>エリア紹介</h4>
+          </summary>
+          <div class="flex area">
+            <div class="card">
+              <h5><a href="">ワールドバザール</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">アドベンチャーワールド</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">ウエスタンランド</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">クリッターカントリー</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">ファンタジーランド</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">トゥーンタウン</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <div class="card">
+              <h5><a href="">トゥモローランド</a></h5>
+              <img src="" alt="">
+              <p></p>
+            </div>
+          </div>
+        </details>
+        <h4>アトラクション</h4>
+        <details>
+          <summary>
+            <h5>ファストパス対応アトラクション一覧</h5>
+          </summary>
+          <div class="flex">
+            <div class="card">
+              <h5><a href="">イッツ・ア・スモールワールド</a></h5>
+              <p>ファンタジーランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">ホーンテッドマンション</a></h5>
+              <p>ファンタジーランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">プーさんのハニーハント</a></h5>
+              <p>ファンタジーランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">スプラッシュ・マウンテン</a></h5>
+              <p>クリッターカントリー</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">ビッグサンダー・マウンテン</a></h5>
+              <p>ウエスタンランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">スター・ツアーズ：<br>ザ・アドベンチャーズ・コンティニュー</a></h5>
+              <p>トゥモローランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">モンスターズ・インク”ライド＆ゴーシーク”</a></h5>
+              <p>トゥモローランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">バズ・ライトイヤーのアストロブラスター</a></h5>
+              <p>トゥモローランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">スペース・マウンテン</a></h5>
+              <p>トゥモローランド</p>
+              <img src="" alt="">
+            </div>
+          </div>
+        </details>
+        <h5>人気アトラクション紹介</h5>
       </section>
 
       <section>
-        <h4>AirBnb</h4>
-        <p></p>
+        <h3>AirBnb</h3>
+        <h4></h4>
+        <img src="img/airbnb1.png" alt="" width="300">
+        <a href="https://www.airbnb.jp/users/show/210518872">ホスト：巖（いわお）きいこさん</a>
+        <h4>Access</h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.4647585553325!2d139.88855511519952!3d35.64091943978919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60187d0b884f0281%3A0x5810761fbe267d62!2z44CSMjc5LTAwNDIg5Y2D6JGJ55yM5rWm5a6J5biC5p2x6YeO77yT5LiB55uu77yT77yU4oiS77yY!5e0!3m2!1sja!2sjp!4v1541494979587" width="340" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <h4>How to check in</h4>
+        <p>ホストが出迎えます（ゲスト専用玄関あり）</p>
+        <h4>Logistics</h4>
+        <p>荷物預かりOK<br>チェックイン前やチェックアウト後、身軽にぶらつきたいゲストに対応</p>
+        <h4>Amenities</h4>
+        <img src="img/airbnb3.png" alt="" width="300">
+        <ul>
+          <li>Wi-Fi（屋内はインターネット常時接続可能）</li>
+          <li>タオル、シーツ、石鹸、トイレットペーパー</li>
+          <li>シャンプー</li>
+          <li>ヘアドライヤー</li>
+          <li>ハンガー</li>
+          <li>シーツ類<</li> <li>キッチン</li>
+          <li>鍋、フライパン、油、塩&こしょう</li>
+          <li>食器&カトラリー</li>
+          <li>電子レンジ</li>
+          <li>冷蔵庫</li>
+          <li>オーブン</li>
+          <li>コンロ</li>
+          <li>テレビ</li>
+          <li>エアコン</li>
+          <li>室内暖炉・薪ストーブ・囲炉裏</li>
+          <li>洗濯機</li>
+          <li>乾燥機</li>
+          <li>アイロン</li>
+          <li>絵本&おもちゃ</li>
+          <li>救急箱</li>
+          <li>敷地内無料駐車場</li>
+        </ul>
       </section>
 
       <section>
-        <h4>Dinner</h4>
-        <h5>Day2</h5>
+        <h3>Dinner</h3>
+        <h4>Day2</h4>
         <ul>
           <li><a href=""></a></li>
           <li><a href=""></a></li>
