--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <table>
           <tbody>
             <tr class="">
-              <td class="circle">20:30</td>
-              <td><a href="https://www.kansai-airport.or.jp/map/t1" target="_blank">関西空港 第1ターミナル2F 集合</a></td>
-              <td>詳細は後日。<br>夕飯は各々？翌日の朝ごはん持参。<br><a href="http://bit.ly/2QoGBrv" target="_blank">オンラインチェックイン可能</a></td>
+              <td class="circle">20:00</td>
+              <td><a href="https://www.kansai-airport.or.jp/map/t1" target="_blank">関西空港 第1ターミナル2F 到着</a></td>
+              <td><a href="http://bit.ly/2QoGBrv" target="_blank">オンラインチェックイン可能</a></td>
             </tr>
             <tr class="transfar">
               <td class="">|</td>
@@ -84,7 +84,7 @@
               <td><a href="http://bit.ly/2PiMYjT" target="_blank">乗り換え</a></td>
             </tr>
             <tr class="">
-              <td class="circle">24:00</td>
+              <td class="circle">24:30</td>
               <td>舞浜駅 到着</td>
               <td></td>
             </tr>
@@ -94,7 +94,7 @@
               <td></td>
             </tr>
             <tr class="">
-              <td class="circle">24:15</td>
+              <td class="circle">24:45</td>
               <td>AirBnb 到着</td>
               <td></td>
             </tr>
@@ -116,9 +116,9 @@
               <td></td>
             </tr>
             <tr>
-              <td class="circle">07:40</td>
+              <td class="circle">07:50</td>
               <td>ディズニーシー 着</td>
-              <td>8時開場予定</td>
+              <td><a href="https://www.tokyodisneyresort.jp/tdr/calendar.html">8時開場予定</a></td>
             </tr>
             <tr class="transfar">
               <td class="">|</td>
@@ -157,7 +157,7 @@
             </tr>
             <tr class="">
               <td class="circle">23:15</td>
-              <td>AirBnb 到着</td>
+              <td><a href="https://www.airbnb.jp/reservation/itinerary?code=HMTXRAJPYB">AirBnb 到着</a></td>
               <td></td>
             </tr>
           </tbody>
@@ -180,7 +180,7 @@
             <tr>
               <td class="circle">08:40</td>
               <td>ディズニーランド 着</td>
-              <td>9時開場予定</td>
+              <td><a href="https://www.tokyodisneyresort.jp/tdr/calendar.html">9時開場予定</a></td>
             </tr>
             <tr class="transfar">
               <td class="">|</td>
@@ -249,7 +249,7 @@
 
     <article id="spot" class="">
       <h2>Spot Information</h2>
-      <section>
+      <section class="container">
         <h3>Kansai Airport</h3>
         <h4>空港アクセス</h4>
         <div class="flex">
@@ -258,7 +258,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="container">
         <h3>Narita Airport</h3>
         <h4>空港アクセス</h4>
         <div class="flex">
@@ -375,6 +375,7 @@
             </div>
           </div>
         </details>
+        <h5>人気アトラクション</h5>
       </section>
 
       <section class="container">
@@ -484,45 +485,53 @@
             </div>
           </div>
         </details>
-        <h5>人気アトラクション紹介</h5>
+        <h5>人気アトラクション</h5>
       </section>
 
-      <section>
+      <section class="container airbnb">
         <h3>AirBnb</h3>
-        <h4></h4>
-        <img src="img/airbnb1.png" alt="" width="300">
-        <a href="https://www.airbnb.jp/users/show/210518872">ホスト：巖（いわお）きいこさん</a>
+        <div class="host">
+          <h4>Host Information</h4>
+          <a href="https://www.airbnb.jp/users/show/210518872"><img src="img/airbnb-host.jpg" alt="" width="150">ホスト：<ruby>
+              巖<rt>いわお</rt>
+            </ruby>
+            きいこさん</a>
+        </div>
         <h4>Access</h4>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.4647585553325!2d139.88855511519952!3d35.64091943978919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60187d0b884f0281%3A0x5810761fbe267d62!2z44CSMjc5LTAwNDIg5Y2D6JGJ55yM5rWm5a6J5biC5p2x6YeO77yT5LiB55uu77yT77yU4oiS77yY!5e0!3m2!1sja!2sjp!4v1541494979587" width="340" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
         <h4>How to check in</h4>
-        <p>ホストが出迎えます（ゲスト専用玄関あり）</p>
+        <p>ホストがお出迎え（ゲスト専用玄関あり）</p>
         <h4>Logistics</h4>
         <p>荷物預かりOK<br>チェックイン前やチェックアウト後、身軽にぶらつきたいゲストに対応</p>
         <h4>Amenities</h4>
         <img src="img/airbnb3.png" alt="" width="300">
-        <ul>
-          <li>Wi-Fi（屋内はインターネット常時接続可能）</li>
-          <li>タオル、シーツ、石鹸、トイレットペーパー</li>
-          <li>シャンプー</li>
-          <li>ヘアドライヤー</li>
-          <li>ハンガー</li>
-          <li>シーツ類<</li> <li>キッチン</li>
-          <li>鍋、フライパン、油、塩&こしょう</li>
-          <li>食器&カトラリー</li>
-          <li>電子レンジ</li>
-          <li>冷蔵庫</li>
-          <li>オーブン</li>
-          <li>コンロ</li>
-          <li>テレビ</li>
-          <li>エアコン</li>
-          <li>室内暖炉・薪ストーブ・囲炉裏</li>
-          <li>洗濯機</li>
-          <li>乾燥機</li>
-          <li>アイロン</li>
-          <li>絵本&おもちゃ</li>
-          <li>救急箱</li>
-          <li>敷地内無料駐車場</li>
-        </ul>
+        <details>
+          <summary>アメニティーをチェックする</summary>
+          <ul>
+            <li>Wi-Fi（屋内はインターネット常時接続可能）</li>
+            <li>タオル、シーツ、石鹸、トイレットペーパー</li>
+            <li>シャンプー</li>
+            <li>ヘアドライヤー</li>
+            <li>ハンガー</li>
+            <li>シーツ類</li>
+            <li>キッチン</li>
+            <li>鍋、フライパン、油、塩&こしょう</li>
+            <li>食器&カトラリー</li>
+            <li>電子レンジ</li>
+            <li>冷蔵庫</li>
+            <li>オーブン</li>
+            <li>コンロ</li>
+            <li>テレビ</li>
+            <li>エアコン</li>
+            <li>室内暖炉・薪ストーブ・囲炉裏</li>
+            <li>洗濯機</li>
+            <li>乾燥機</li>
+            <li>アイロン</li>
+            <li>絵本&おもちゃ</li>
+            <li>救急箱</li>
+            <li>敷地内無料駐車場</li>
+          </ul>
+        </details>
       </section>
 
       <section>
