--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <tr>
               <td class="circle">07:50</td>
               <td>ディズニーシー 着</td>
-              <td><a href="https://www.tokyodisneyresort.jp/tdr/calendar.html">8時開場予定</a></td>
+              <td><a href="https://www.tokyodisneyresort.jp/tdr/calendar.html" target="_blank">8時開場予定</a></td>
             </tr>
             <tr class="transfar">
               <td class="">|</td>
@@ -157,7 +157,7 @@
             </tr>
             <tr class="">
               <td class="circle">23:15</td>
-              <td><a href="https://www.airbnb.jp/reservation/itinerary?code=HMTXRAJPYB">AirBnb 到着</a></td>
+              <td><a href="https://www.airbnb.jp/reservation/itinerary?code=HMTXRAJPYB" target="_blank">AirBnb 到着</a></td>
               <td></td>
             </tr>
           </tbody>
@@ -180,7 +180,7 @@
             <tr>
               <td class="circle">08:40</td>
               <td>ディズニーランド 着</td>
-              <td><a href="https://www.tokyodisneyresort.jp/tdr/calendar.html">9時開場予定</a></td>
+              <td><a href="https://www.tokyodisneyresort.jp/tdr/calendar.html" target="_blank">9時開場予定</a></td>
             </tr>
             <tr class="transfar">
               <td class="">|</td>
@@ -276,7 +276,7 @@
           <a href="https://media2.tokyodisneyresort.jp/home/download/map/S_map_1811.pdf" target="_blank">DL</a>
         </div>
         <div class="map-img">
-          <a href="https://www.tokyodisneyresort.jp/tdl/map.html" target="_blank" class="map">
+          <a href="https://www.tokyodisneyresort.jp/tdl/map.html" target="_blank" class="map" target="_blank">
             <img src="img/map_tds.jpg" alt="">
           </a>
         </div>
@@ -327,7 +327,7 @@
           <summary>
             <h5>ファストパス対応アトラクション一覧</h5>
           </summary>
-          <div class="flex">
+          <div class="flex fastpass">
             <div class="card">
               <h5><a href="">ニモ＆フレンズ・シーライダー</a></h5>
               <p>ポートディスカバリー</p>
@@ -375,7 +375,42 @@
             </div>
           </div>
         </details>
-        <h5>人気アトラクション</h5>
+        <details>
+          <summary>
+            <h5>人気アトラクション</h5>
+          </summary>
+          <div class="flex">
+            <div class="card">
+              <h5><a href="">イッツ・ア・スモールワールド</a></h5>
+              <p>ファンタジーランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">ホーンテッドマンション</a></h5>
+              <p>ファンタジーランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">プーさんのハニーハント</a></h5>
+              <p>ファンタジーランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">スプラッシュ・マウンテン</a></h5>
+              <p>クリッターカントリー</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">ビッグサンダー・マウンテン</a></h5>
+              <p>ウエスタンランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">スター・ツアーズ：<br>ザ・アドベンチャーズ・コンティニュー</a></h5>
+              <p>トゥモローランド</p>
+              <img src="" alt="">
+            </div>
+        </details>
       </section>
 
       <section class="container">
@@ -437,7 +472,7 @@
           <summary>
             <h5>ファストパス対応アトラクション一覧</h5>
           </summary>
-          <div class="flex">
+          <div class="flex fastpass">
             <div class="card">
               <h5><a href="">イッツ・ア・スモールワールド</a></h5>
               <p>ファンタジーランド</p>
@@ -485,14 +520,49 @@
             </div>
           </div>
         </details>
-        <h5>人気アトラクション</h5>
+        <details>
+          <summary>
+            <h5>人気アトラクション</h5>
+          </summary>
+          <div class="flex">
+            <div class="card">
+              <h5><a href="">イッツ・ア・スモールワールド</a></h5>
+              <p>ファンタジーランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">ホーンテッドマンション</a></h5>
+              <p>ファンタジーランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">プーさんのハニーハント</a></h5>
+              <p>ファンタジーランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">スプラッシュ・マウンテン</a></h5>
+              <p>クリッターカントリー</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">ビッグサンダー・マウンテン</a></h5>
+              <p>ウエスタンランド</p>
+              <img src="" alt="">
+            </div>
+            <div class="card">
+              <h5><a href="">スター・ツアーズ：<br>ザ・アドベンチャーズ・コンティニュー</a></h5>
+              <p>トゥモローランド</p>
+              <img src="" alt="">
+            </div>
+        </details>
       </section>
 
       <section class="container airbnb">
         <h3>AirBnb</h3>
         <div class="host">
           <h4>Host Information</h4>
-          <a href="https://www.airbnb.jp/users/show/210518872"><img src="img/airbnb-host.jpg" alt="" width="150">ホスト：<ruby>
+          <a href="https://www.airbnb.jp/users/show/210518872" target="_blank"><img src="img/airbnb-host.jpg" alt="" width="150">ホスト：<ruby>
               巖<rt>いわお</rt>
             </ruby>
             きいこさん</a>
