--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
   <main>
     <article id="about" class="">
       <h2>About</h2>
-      <h3>Date</h3>
-      <p>Nov. 20th, 2018 ~ Nov. 22th</p>
+      <div class="date">
+        <h3>Date</h3>
+        <p>Nov. 20th, 2018 ~ Nov. 22th</p>
+        <div class="dl calender">
+          <a href="tdr.ics">カレンダー</a>
+          <a href="tdr.ics">登録</a>
+        </div>
+      </div>
       <h4>Purpose</h4>
       <p>夢の国に遊びに行くぞー！</p>
       <h4>Place of stay</h4>
@@ -148,7 +154,7 @@
             <tr class="">
               <td class=" circle">21:30</td>
               <td><a href="https://www.ikspiari.com/" target="_blank">イクスピアリ</a></td>
-              <td><a href="https://www.ikspiari.com/gourmet/" target="_blank">レストラン情報<br>（いずれもL.O.22:00なので注意）</a></td>
+              <td><a href="https://www.ikspiari.com/gourmet/" target="_blank">レストラン情報<br>（L.O.22:00！）</a></td>
             </tr>
             <tr class="transfar">
               <td class="">|</td>
@@ -330,47 +336,47 @@
           <div class="flex fastpass">
             <div class="card">
               <h5><a href="">ニモ＆フレンズ・シーライダー</a></h5>
-              <p>ポートディスカバリー</p>
+              <h6>ポートディスカバリー</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">タワー・オブ・テラー</a></h5>
-              <p>アメリカンウォーターフロント</p>
+              <h6>アメリカンウォーターフロント</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">トイ・ストーリー・マニア！</a></h5>
-              <p>アメリカンウォーターフロント</p>
+              <h6>アメリカンウォーターフロント</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">マーメイドラグーンシアター</a></h5>
-              <p>マーメイドラグーン</p>
+              <h6>マーメイドラグーン</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">マジックランプシアター</a></h5>
-              <p>アラビアンコースト</p>
+              <h6>アラビアンコースト</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">レイジングスピリッツ</a></h5>
-              <p>ロストリバーデルタ</p>
+              <h6>ロストリバーデルタ</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">インディ・ジョーンズ®︎アドベンチャー：<br>クリスタルスカルの魔宮</a></h5>
-              <p>ロストリバーデルタ</p>
+              <h6>ロストリバーデルタ</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">センター・オブ・ジ・アース</a></h5>
-              <p>ミステリアスアイランド</p>
+              <h6>ミステリアスアイランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">海底2万マイル</a></h5>
-              <p>ミステリアスアイランド</p>
+              <h6>ミステリアスアイランド</h6>
               <img src="" alt="">
             </div>
           </div>
@@ -381,34 +387,55 @@
           </summary>
           <div class="flex">
             <div class="card">
-              <h5><a href="">イッツ・ア・スモールワールド</a></h5>
-              <p>ファンタジーランド</p>
+              <h5><a href="">ニモ＆フレンズ・シーライダー</a></h5>
+              <h6>ポートディスカバリー</h6>
               <img src="" alt="">
             </div>
             <div class="card">
-              <h5><a href="">ホーンテッドマンション</a></h5>
-              <p>ファンタジーランド</p>
+              <h5><a href="">タワー・オブ・テラー</a></h5>
+              <h6>アメリカンウォーターフロント</h6>
               <img src="" alt="">
             </div>
             <div class="card">
-              <h5><a href="">プーさんのハニーハント</a></h5>
-              <p>ファンタジーランド</p>
+              <h5><a href="">トイ・ストーリー・マニア！</a></h5>
+              <h6>アメリカンウォーターフロント</h6>
               <img src="" alt="">
             </div>
+        </details>
+        <details>
+          <summary>
+            <h5>イベント情報</h5>
+          </summary>
+          <div class="flex event">
             <div class="card">
-              <h5><a href="">スプラッシュ・マウンテン</a></h5>
-              <p>クリッターカントリー</p>
-              <img src="" alt="">
+              <h5><a href="">イッツ・クリスマスタイム！</a></h5>
+              <h6>メディテレーニアンハーバー</h6>
+              <img src="img/event4.jpg" alt="" width="150">
+              <p>クリスマスの音楽やライブパフォーマンスにあふれたレビューショーが今年初登場します。<br>
+                ミッキーマウスをはじめとするディズニーの仲間たちがお届けするこのショーでは、シンガーの歌うクリスマスメドレーに乗せて色とりどりの衣装に身を包んだダンサーが登場し、クリスマスの名曲に合わせて軽快なタップダンスや足並みの揃った美しいラインダンスなどを披露。最後にはパイロ（花火）が盛大に打ちあがり、フィナーレを迎えます。</p>
+              <a href="https://www.tokyodisneyresort.jp/tds/show/schedule/999/">ショースケジュール</a>
             </div>
             <div class="card">
-              <h5><a href="">ビッグサンダー・マウンテン</a></h5>
-              <p>ウエスタンランド</p>
-              <img src="" alt="">
+              <h5><a href="">カラー・オブ・クリスマス</a></h5>
+              <h6>メディテレーニアンハーバー</h6>
+              <img src="img/event2.jpg" alt="">
+              <p>高さ約15メートルもの大きなクリスマスツリーや小さなツリーのオブジェが光り輝く夜の水上エンターテイメントです。<br>
+                ディズニーの仲間たちは、クリスマスのオーナメントが輝く装い新たになったセレモニーバージに乗って登場し、夜のメディテレーニアンハーバーをよりロマンティックに彩ります。</p>
+              <a href="https://www.tokyodisneyresort.jp/tds/show/schedule/954/">ショースケジュール</a>
             </div>
             <div class="card">
-              <h5><a href="">スター・ツアーズ：<br>ザ・アドベンチャーズ・コンティニュー</a></h5>
-              <p>トゥモローランド</p>
-              <img src="" alt="">
+              <h5><a href="">カラー・オブ・クリスマスーアフターグロウ</a></h5>
+              <h6>メディテレーニアンハーバー</h6>
+              <img src="img/event3.jpg" alt="">
+              <p>「カラー・オブ・クリスマス」で人々の願いが集まり光り輝いたクリスマスツリーとツリーのオブジェは、花火が終わった後も光と音楽が連動して色鮮やかに変化し、輝き続けます。<br>
+                今年も一部の公演では雪も舞い、よりロマンティックな雰囲気に！</p>
+            </div>
+            <div class="card">
+              <h5><a href="">アトモスフィア・エンターテイメント</a></h5>
+              <h6>園内各所</h6>
+              <img src="img/event5.jpg" alt="">
+              <p>アトモスフィア・エンターテイメントも、一部クリスマスバージョンに。<br>
+                クリスマスならではのパフォーマンスをお楽しみください。</p>
             </div>
         </details>
       </section>
@@ -475,47 +502,47 @@
           <div class="flex fastpass">
             <div class="card">
               <h5><a href="">イッツ・ア・スモールワールド</a></h5>
-              <p>ファンタジーランド</p>
+              <h6>ファンタジーランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">ホーンテッドマンション</a></h5>
-              <p>ファンタジーランド</p>
+              <h6>ファンタジーランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">プーさんのハニーハント</a></h5>
-              <p>ファンタジーランド</p>
+              <h6>ファンタジーランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">スプラッシュ・マウンテン</a></h5>
-              <p>クリッターカントリー</p>
+              <h6>クリッターカントリー</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">ビッグサンダー・マウンテン</a></h5>
-              <p>ウエスタンランド</p>
+              <h6>ウエスタンランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">スター・ツアーズ：<br>ザ・アドベンチャーズ・コンティニュー</a></h5>
-              <p>トゥモローランド</p>
+              <h6>トゥモローランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">モンスターズ・インク”ライド＆ゴーシーク”</a></h5>
-              <p>トゥモローランド</p>
+              <h6>トゥモローランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">バズ・ライトイヤーのアストロブラスター</a></h5>
-              <p>トゥモローランド</p>
+              <h6>トゥモローランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">スペース・マウンテン</a></h5>
-              <p>トゥモローランド</p>
+              <h6>トゥモローランド</h6>
               <img src="" alt="">
             </div>
           </div>
@@ -527,33 +554,65 @@
           <div class="flex">
             <div class="card">
               <h5><a href="">イッツ・ア・スモールワールド</a></h5>
-              <p>ファンタジーランド</p>
+              <h6>ファンタジーランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">ホーンテッドマンション</a></h5>
-              <p>ファンタジーランド</p>
+              <h6>ファンタジーランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">プーさんのハニーハント</a></h5>
-              <p>ファンタジーランド</p>
+              <h6>ファンタジーランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">スプラッシュ・マウンテン</a></h5>
-              <p>クリッターカントリー</p>
+              <h6>クリッターカントリー</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">ビッグサンダー・マウンテン</a></h5>
-              <p>ウエスタンランド</p>
+              <h6>ウエスタンランド</h6>
               <img src="" alt="">
             </div>
             <div class="card">
               <h5><a href="">スター・ツアーズ：<br>ザ・アドベンチャーズ・コンティニュー</a></h5>
-              <p>トゥモローランド</p>
-              <img src="" alt="">
+              <h6>トゥモローランド</>
+                <img src="" alt="">
+            </div>
+        </details>
+        <details>
+          <summary>
+            <h5>イベント情報</h5>
+          </summary>
+          <div class="flex event">
+            <div class="card">
+              <h5><a href="https://www.tokyodisneyresort.jp/treasure/fantasy/christmas2018/tdl/show.html" target="_blank">ディズニー・クリスマス・ストーリーズ</a></h5>
+              <h6>
+                <a href="https://www.tokyodisneyresort.jp/treasure/fantasy/christmas2018/tdl/show.html#map">パレードルート</a>
+              </h6>
+              <img src="img/event4.jpg" alt="" width="150">
+              <p>ディズニーの仲間たちが大切な人たちと一緒に過ごすクリスマスの物語が綴られる、ファンタジックで楽しいパレードです。<br>
+                ミッキーマウスや仲間たちと一緒に心温まるクリスマスをお祝いしましょう！</p>
+              <a href="https://www.tokyodisneyresort.jp/tdl/show/schedule/955/">ショースケジュール</a>
+            </div>
+            <div class="card">
+              <h5><a href="https://www.tokyodisneyresort.jp/treasure/fantasy/christmas2018/tdl/show.html" target="_blank">エレクトリカルパレード・ドリームライツ</a></h5>
+              <h6>
+                <a href="https://www.tokyodisneyresort.jp/treasure/fantasy/christmas2018/tdl/show.html#map">パレードルート</a>
+              </h6>
+              <img src="img/event2.jpg" alt="">
+              <p>音と光のきらびやかな夜のパレードもクリスマスバージョンに。<br>音楽もクリスマスソングにアレンジされ、ミッキーマウスたちもキラキラしたクリスマスコスチュームで登場します。</p>
+              <a href="https://www.tokyodisneyresort.jp/tdl/show/schedule/913">ショースケジュール</a>
+            </div>
+            <div class="card">
+              <h5><a href="https://www.tokyodisneyresort.jp/treasure/fantasy/christmas2018/tdl/show.html" target="_blank">アトモスフィア・エンターテイメント</a></h5>
+              <h6>園内各所</h6>
+              <img src="img/event5.jpg" alt="">
+              <p>アトモスフィア・エンターテイメントも、一部クリスマスバージョンに。<br>
+                クリスマスならではのパフォーマンスをお楽しみください。</p>
             </div>
         </details>
       </section>
